try to implement different difficulty

--- a/index.html
+++ b/index.html
@@ -10,12 +10,27 @@
     <body>
 
         <div class="container">
+
+            <!-- #btn_play -->
             <button id="btn_play">Gioca!</button>
+
+            <!-- #difficulty -->
+            <select name="difficulty" id="difficulty">
+                <option value="difficulty_1">Difficoltà 1</option>
+                <option value="difficulty_2">Difficoltà 2</option>
+                <option value="difficulty_3">Difficoltà 3</option>
+            </select>
+
+            <!-- #btn_reset -->
             <button id="btn_reset">Clear</button>
+            
             <div class="grid">
 
             </div>
+            <!-- /.grid -->
+
         </div>
+        <!-- /.container -->
 
     </body>
 </html>
