try to add to change quantity of cell

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
             <button id="btn_play">Gioca!</button>
 
             <!-- #difficulty -->
-            <select name="difficulty" id="difficulty" onchange="changeDifficulty()">
-                <option>Scegli una difficoltà</option>
+            <select name="difficulty" id="difficulty"
+                onchange="changeDifficulty()">
+                <!-- <option>Scegli una difficoltà</option> -->
                 <option value="100">Difficoltà 1</option>
                 <option value="81">Difficoltà 2</option>
                 <option value="49">Difficoltà 3</option>
@@ -24,7 +25,7 @@
 
             <!-- #btn_reset -->
             <button id="btn_reset">Clear</button>
-            
+
             <div class="grid">
 
             </div>
