add different difficulty with different grids

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <select name="difficulty" id="difficulty"
                 onchange="changeDifficulty()">
                 <!-- <option>Scegli una difficoltà</option> -->
-                <option value="100">Difficoltà 1</option>
-                <option value="81">Difficoltà 2</option>
-                <option value="49">Difficoltà 3</option>
+                <option value="100">Facile</option>
+                <option value="81">Intermedio</option>
+                <option value="49">Difficile</option>
             </select>
 
             <!-- #btn_reset -->
