add winner or looser

--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Griglia Campo Minato</title>
+        <title>Campo Fiorito</title>
         <link rel="stylesheet" href="./assets/css/style.css">
         <script src="./assets/js/main.js" defer></script>
     </head>
     <body>
 
         <div class="container">
+
+            <h1>Campo Minato</h1>
 
             <!-- #btn_play -->
             <button id="btn_play">Gioca!</button>
@@ -26,10 +28,15 @@
             <!-- #btn_reset -->
             <button id="btn_reset">Clear</button>
 
+            <!-- /result -->
+            <div class="result">
+
+            </div>
+
+            <!-- .grid -->
             <div class="grid">
 
             </div>
-            <!-- /.grid -->
 
         </div>
         <!-- /.container -->
